// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageEdit when imageList is undefined it does not render the component 1`] = `<DocumentFragment />`;

exports[`ImageEdit when images in list imageList are null it does not render the component 1`] = `
<DocumentFragment>
  <div
    class="image-edit css-nen11g-MuiStack-root"
  >
    <div
      class="image original MuiBox-root css-0"
    >
      <picture>
        <source
          media="(min-width: 1000px)"
          sizes="400px"
          srcset="https://image.url?w=400&h=300&fit=fill&fm=webp&q=75 1x, https://image.url?w=800&h=600&fit=fill&fm=webp&q=75 2x"
        />
        <source
          media="(min-width: 500px) and (max-width: 999px)"
          sizes="200px"
          srcset="https://image.url?w=200&h=150&fit=fill&fm=webp&q=75 1x, https://image.url?w=400&h=300&fit=fill&fm=webp&q=75 2x"
        />
        <source
          media="(max-width: 499px)"
          sizes="100px"
          srcset="https://image.url?w=100&h=75&fit=fill&fm=webp&q=75 1x, https://image.url?w=200&h=150&fit=fill&fm=webp&q=75 2x"
        />
        <img
          alt="Image Description"
          class="dynamicImage"
          fetchpriority="auto"
          height="300"
          loading="lazy"
          src="https://image.url?w=400&h=300&fit=fill&q=75"
          width="400"
        />
      </picture>
    </div>
    <div
      class="css-y3gnng-MuiStack-root"
    >
      <button
        aria-label="change image button"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge edit-button css-9y1egq-MuiButtonBase-root-MuiButton-root"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeLarge css-htszrh-MuiButton-startIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ImageIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"
            />
          </svg>
        </span>
        Change Image
        <span
          class="dropdown-icon"
        >
          ▼
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="upload image button"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge edit-button css-9y1egq-MuiButtonBase-root-MuiButton-root"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeLarge css-htszrh-MuiButton-startIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CloudUploadIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"
            />
          </svg>
        </span>
        Add Image
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ImageEdit when there is content renders the component 1`] = `
<DocumentFragment>
  <div
    class="image-edit css-nen11g-MuiStack-root"
  >
    <div
      class="image original MuiBox-root css-0"
    >
      <picture>
        <source
          media="(min-width: 1000px)"
          sizes="400px"
          srcset="https://image.url?w=400&h=300&fit=fill&fm=webp&q=75 1x, https://image.url?w=800&h=600&fit=fill&fm=webp&q=75 2x"
        />
        <source
          media="(min-width: 500px) and (max-width: 999px)"
          sizes="200px"
          srcset="https://image.url?w=200&h=150&fit=fill&fm=webp&q=75 1x, https://image.url?w=400&h=300&fit=fill&fm=webp&q=75 2x"
        />
        <source
          media="(max-width: 499px)"
          sizes="100px"
          srcset="https://image.url?w=100&h=75&fit=fill&fm=webp&q=75 1x, https://image.url?w=200&h=150&fit=fill&fm=webp&q=75 2x"
        />
        <img
          alt="Image Description"
          class="dynamicImage"
          fetchpriority="auto"
          height="300"
          loading="lazy"
          src="https://image.url?w=400&h=300&fit=fill&q=75"
          width="400"
        />
      </picture>
    </div>
    <div
      class="css-y3gnng-MuiStack-root"
    >
      <button
        aria-label="change image button"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge edit-button css-9y1egq-MuiButtonBase-root-MuiButton-root"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeLarge css-htszrh-MuiButton-startIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ImageIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"
            />
          </svg>
        </span>
        Change Image
        <span
          class="dropdown-icon"
        >
          ▼
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="upload image button"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge edit-button css-9y1egq-MuiButtonBase-root-MuiButton-root"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeLarge css-htszrh-MuiButton-startIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CloudUploadIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"
            />
          </svg>
        </span>
        Add Image
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ImageEdit when there is content renders the component 2`] = `
<DocumentFragment>
  <div
    class="image-edit css-nen11g-MuiStack-root"
  >
    <div
      class="image original MuiBox-root css-0"
    >
      <picture>
        <source
          media="(min-width: 1000px)"
          sizes="400px"
          srcset="https://image.url/1?w=400&h=300&fit=fill&fm=webp&q=75 1x, https://image.url/1?w=800&h=600&fit=fill&fm=webp&q=75 2x"
        />
        <source
          media="(min-width: 500px) and (max-width: 999px)"
          sizes="200px"
          srcset="https://image.url/1?w=200&h=150&fit=fill&fm=webp&q=75 1x, https://image.url/1?w=400&h=300&fit=fill&fm=webp&q=75 2x"
        />
        <source
          media="(max-width: 499px)"
          sizes="100px"
          srcset="https://image.url/1?w=100&h=75&fit=fill&fm=webp&q=75 1x, https://image.url/1?w=200&h=150&fit=fill&fm=webp&q=75 2x"
        />
        <img
          alt="Image Description 1"
          class="dynamicImage"
          fetchpriority="auto"
          height="300"
          loading="lazy"
          src="https://image.url/1?w=400&h=300&fit=fill&q=75"
          width="400"
        />
      </picture>
    </div>
    <div
      class="css-y3gnng-MuiStack-root"
    >
      <button
        aria-label="change image button"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge edit-button css-9y1egq-MuiButtonBase-root-MuiButton-root"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeLarge css-htszrh-MuiButton-startIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ImageIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"
            />
          </svg>
        </span>
        Change Image
        <span
          class="dropdown-icon"
        >
          ▼
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="upload image button"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge Mui-disabled MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge edit-button css-9y1egq-MuiButtonBase-root-MuiButton-root"
        disabled=""
        role="button"
        tabindex="-1"
        type="button"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeLarge css-htszrh-MuiButton-startIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CloudUploadIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"
            />
          </svg>
        </span>
        Add Image
      </button>
    </div>
  </div>
</DocumentFragment>
`;
